--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/react-query": "^5.80.7",
     "expo": "~53.0.11",
     "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
@@ -24,8 +26,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
