--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "^7.2.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
