--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
     "react-native-calendars": "^1.1312.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0"
   },
